fixup: Change image size on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -283,4 +283,8 @@ button:hover span::after {
 		margin-top: 1rem;
 		margin-bottom: 3.5rem;
 	}
+
+	.image {
+		max-width: 300px;
+	}
 }
